Version 2.0.0-beta.1.2 Changes (#165)
* Fixed unit tests for SqliteUri

* Renaming to change case for SQL and SQS prefixes

* Renamed URI classes to begin with all-caps.  Changed classes that use those classes